<resources>

    <string name="app_name">VideoRecognition</string>

<!-- Main menu-->
    <string name="MainMenu_settings">Settings</string>

<!-- cameraFragment -->
    <string name="cameraFragment">Camera fragment</string>

<!-- settingsFragment -->
    <string name="settingsFragment">Application settings</string>
    <string name="settingsSaveAndReturn">Save and return</string>
    <string name="settingsReturn">return</string>

<!-- errorStrings -->
    <string name="unknownItemOnClick">Unknown item clicked</string>
    <string name="dataLayout">Data Layout</string>
    <string name="filesPath">Path to saved files</string>
    <string name="dbPath">Path to SQLite database</string>
    <string name="rootPath">Path to root application folder on SD card</string>

</resources>
